# akonadi-airsync

./: AirsyncDownloadResource.cxx  AirsyncDownloadResource.hxx  CMakeLists.txt  Messages.sh  Session.cxx  Session.hxx  Settings.ui  SettingsDialog.cxx  SettingsDialog.hxx  airsyncdownloadresource.desktop  airsyncdownloadresource.kcfg  settings.kcfgc
